<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:visible="false"/>
    <item
        android:id="@+id/action_save"
        android:title="@string/action_save"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_check"
        android:visible="false"/>
    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_delete"
        android:visible="false"/>
</menu>
